Web Service Collector bugfix. Dynamically created/compiled dll's was never released or cleaned up.

--------------
Version 5.3.14 (2022-12-07)
**************
Filter view - now also include 'Path' to filter by.
BugFix: Internal error (not visible to user) when closing filter view some internal Forms errors started and never stops.
Add 'group by minutes' to Collector graph control.

--------------
Version 5.3.15 (2023-04-16)
**************
Add version format options to App/File version Collector.

--------------
Version 5.3.16 (2023-08-18)
**************
Add separate Windows for editing Monitor pack Config variables.
Fix pausing while displaying Monitor Pack settings window.

--------------
Version 5.3.17 (2023-08-27)
**************
A few small fixes. 
Config variables editor did not register deletions as changes.
Using config variables in Collector display names improved.

--------------
Version 5.3.18 (2023-09-13)
**************
Collector graphs show value unit when the series is clicked on.

--------------
Version 5.3.19 (2023-12-11)
**************
Enhance the Performance counter collector to handle % Disk Time and other Performance counters that requires more time to initialize.
Performance counter collector now multisample single instance counters as well.

--------------
Version 5.3.20 (2024-02-17)
**************
Small change to Ping collector to record number value even when timeout is raised so it shows these values on graphs.

--------------
Version 5.3.21 (2024-03-08)
**************
Perfmon collector - Rework Instance handling - allow Instance names to be filtered by wildcard ( * ).

--------------
Version 5.3.22 (2024-03-29)
**************
Perfmon collector - Made 'Average' the default when multiple instance values are available.

--------------
Version 5.3.23 (2024-04-26)
**************
Disable collector history when monitor pack runs inside Quickmon service.
Add Value Scale modification to WMI Collector.