@@ -316,3 +316,4 @@ Version 5.3.23 (2024-04-26)
 **************
 Disable collector history when monitor pack runs inside Quickmon service.
 Add Value Scale modification to WMI Collector.
+Menu option on main window to view collector history.
